@@ -11494,6 +11494,7 @@ M       spm_cat12.m
 
 
 ------------------------------------------------------------------------
+r976 | dahnke | 2016-08-01 18:14:59 +0200 (Mo, 01 Aug 2016) | 7 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -11501,5 +11502,14 @@ M       cat_surf_render.m
 M       cat_surf_render2.m
 
 (1) Changed:    Corrected error in old cat_surf_render function.
+
 ------------------------------------------------------------------------
-r976 | dahnke | 2016-08-01 18:14:54
+
+Changed paths:
+M       CHANGES.txt
+M       cat_vol_groupwise_ls.m
+
+Fixed: Realigned images using cat_vol_groupwise_ls.m have now correct (flipped)
+x-voxel size (thanks to Paul Schmidt for pointing to that issue).
+------------------------------------------------------------------------
+r977 | gaser | 2016-08-01 19:14:31
